added about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,10 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>
+                This site is created by Shubham Gavatade <br>
+                It uses data from mapbox.com and darksky.net 
+            </p>
         </div>
         {{>footer}}
     </body>
